--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron center">
-<h1>SFEREX CONSULT</h1>
+<h1>SFERex CONsult</h1>
 <p>
 	<%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
 	<%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
