--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
 	<%= render 'layouts/header' %> 
 	<!-- render is embedded ruby that refers to the partial _header.html.erb, which is the bootstrap header -->
 	<div class="container">
+		<% flash.each do  |name, msg| %>
+			<%= content_tag(:div, msg, lass: "alert alert-#{name}") %>
+		<% end %>
 		<%= yield %>
 	</div>	
 
